# can-sot-protocol

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cliTool/: CMakeLists.txt  README.md
cliTool/src/: CliArgs.h  GenCode.h  GenCodeTemplate.h  GenCodeYamlStructs.h  GenDefFile.h  Util.h  YamlObjectTreeVisitor.h  main.cpp
doc/: .readthedocs.yaml  protocol_can_frames.md
doc/_conf/: conf.py
example/: example-can-sot.spec.yaml
example/client-linux/: CMakeLists.txt
example/client-linux/src/: main.cpp
example/client-linux/src/protocol_generated/: SOTProtocol.hpp
example/client-stm32-hal/: CMakeLists.txt  README.md  stm32_controller.ioc
example/client-stm32-hal/src/: app.h
example/client-stm32-hal/src/cubeMxGenerated/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
example/client-stm32-hal/src/cubeMxGenerated/Src/: main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
example/master-linux/: CMakeLists.txt
example/master-linux/src/: main.cpp
scripts/: .gitignore  setup_virtual_can_and_listen.sh  setup_virtual_can_master_client.sh  start_linux_master_client.sh
src/baseLib/: Dummy.cpp  SOTDefs.h
src/baseLib/_example_generated_ot/: ObjectTree.hpp  SOTProtocol.hpp  SOTProtocolRemoteCallArgs.hpp
src/baseLib/communication/: SOTCanCommunication.h  SOTClient.h  SOTMaster.h
src/baseLib/communication/can/: Can.h  CanPackages.h  CheckEndianness.h
src/baseLib/communication/threaded/: SOTMasterLockable.h  SOTMasterLockableType.h  SOTMasterThreaded.h
src/baseLib/objectTree/: DataConversion.h  OTDeclares.h  OTNode.cpp  OTNode.h  OTNodeValueNodeAbstractImpl.h  OTNodeValueTypeDefs.h  OTNodeValueTypes.h  OTTemplate.h  OTUtil.h  ObjectTree.h  ProtocolDef.h
src/baseLib/remoteCalls/: RemoteCalls.h
src/baseLib/util/: EventFlag.h  Logging.h  Result.h
src/driver/driver_template/: DriverTemplate.cpp  DriverTemplate.hpp
src/driver/linux_socketCan/: SocketCanInterface.hpp
src/driver/stm32_hal/: Stm32HalCanInterface.hpp
tests/baseLib/: main.cpp
tests/baseLib/communication/: CanTest.cpp  MockMasterClient.hpp  MockSOTProtocol.hpp  SOTCanCommunication_test.cpp  SOTCanCommunication_test_overflows.cpp  SOTCanMasterThreaded.cpp  SOTCanRemoteCalls_test.cpp
tests/baseLib/objectTree/: OT_test.cpp
tests/baseLib/remoteCalls/: RemoteCalls_test.cpp
tests/testUtil/: DocTestIncl.h  TestUtil.h
